stacks/scrypted/base/deployment.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: scrypted
  namespace: scrypted
  labels:
    app: scrypted
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrypted
  template:
    metadata:
      labels:
        app: scrypted
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      containers:
      - name: scrypted
        image: koush/scrypted:v0.0.170
        ports:
        - name: http
          containerPort: 11080
        resources:
          limits:
            memory: "1200Mi"
          requests:
            memory: "600Mi"
        volumeMounts:
        - name: volv
          readOnly: false
          mountPath: "/server/volume"
        livenessProbe:
          exec:
            command:
            - ls
            - /server/volume/lost+found
          initialDelaySeconds: 5
          periodSeconds: 5
        imagePullPolicy: IfNotPresent
  volumeClaimTemplates:
  - metadata:
      name: volv
    spec:
      resources:
        requests:
          storage: 15Gi
      accessModes: ["ReadWriteOnce"]
      storageClassName: "longhorn"
  serviceName: "scrypted"
